# queuedispatcher

./: CMakeLists.txt  Dockerfile  Dockerfile.build  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt  main.cpp
include/ert/queuedispatcher/: QueueDispatcher.hpp  StreamIf.hpp
src/: CMakeLists.txt  QueueDispatcher.cpp
