add_library (${ERT_QUEUEDISPATCHER_TARGET_NAME} STATIC
        ${CMAKE_CURRENT_LIST_DIR}/QueueDispatcher.cpp
)

target_include_directories(${ERT_QUEUEDISPATCHER_TARGET_NAME}
  PUBLIC ${ERT_QUEUEDISPATCHER_INCLUDE_BUILD_DIR}
)

target_link_libraries(${ERT_QUEUEDISPATCHER_TARGET_NAME}
PRIVATE
-static
)

install(TARGETS ${ERT_QUEUEDISPATCHER_TARGET_NAME}
        ARCHIVE DESTINATION lib/ert)
